--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng2-date-picker": "^11.0.0",
     "ng2-datepicker": "^3.1.1",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
